--- a/public/pricing.html
+++ b/public/pricing.html
@@ -326,8 +326,7 @@
             <div class="limits-section">
                 <div class="limits-title">Usage Limits</div>
                 <ul class="limits-list">
-                    <li>2 listings per day</li>
-                    <li>10 listings total</li>
+                    <li>10 listings per month</li>
                     <li>Try before you buy</li>
                 </ul>
             </div>
@@ -354,10 +353,7 @@
             <div class="limits-section">
                 <div class="limits-title">Usage Limits</div>
                 <ul class="limits-list">
-                    <li>15 listings per day</li>
                     <li>300 listings per month</li>
-                    <li>10 per minute (quick retries)</li>
-                    <!-- hourly limit removed -->
                 </ul>
             </div>
 
@@ -382,10 +378,7 @@
             <div class="limits-section">
                 <div class="limits-title">Usage Limits</div>
                 <ul class="limits-list">
-                    <li>40 listings per day</li>
                     <li>800 listings per month</li>
-                    <li>20 per minute (quick retries)</li>
-                    <!-- hourly limit removed -->
                 </ul>
             </div>
 
@@ -410,10 +403,7 @@
             <div class="limits-section">
                 <div class="limits-title">Usage Limits</div>
                 <ul class="limits-list">
-                    <li>75 listings per day</li>
                     <li>1,500 listings per month</li>
-                    <li>30 per minute (quick retries)</li>
-                    <!-- hourly limit removed -->
                 </ul>
             </div>
 
