--- a/public/privacy.html
+++ b/public/privacy.html
@@ -6,7 +6,7 @@
     <p><strong>We reserve the right to monitor, restrict, or terminate accounts that violate our fair use policy.</strong></p>
     <ul>
       <li><strong>Usage Monitoring:</strong> We actively monitor API usage patterns, request frequencies, and user behavior to detect abuse, fraud, or violations of our terms.</li>
-      <li><strong>Rate Limiting:</strong> We enforce strict usage limits based on your subscription tier (Free Trial: 2/day max, Starter: 15/day, Professional: 40/day, Business: 75/day). Circumventing these limits is prohibited.</li>
+  <li><strong>Rate Limiting:</strong> We enforce usage limits based on your subscription tier (monthly totals vary by plan). Additionally, we apply server-side protections to limit rapid automated requests (burst protection). Circumventing these limits is prohibited.</li>
       <li><strong>Account Suspension:</strong> We may immediately suspend or terminate accounts that:
         <ul>
           <li>Attempt to bypass rate limits or abuse our API</li>
@@ -106,7 +106,7 @@
       <li><strong>Email Address:</strong> To authenticate you via Supabase magic link and tie your extension usage to your account.</li>
       <li><strong>Supabase Session Token:</strong> To keep you logged in, fetch your profile (subscription status, API calls used), and securely call our backend APIs from the extension popup and content scripts.</li>
       <li><strong>Stripe Customer ID:</strong> To create and manage subscription Checkout Sessions and redirect you to the Stripe Customer Portal.</li>
-  <li><strong>Usage Data:</strong> To enforce subscription limits (monthly, daily, and per-minute) and calculate billing if you upgrade to a paid plan. We also use it to improve Product features and detect abusive behavior.</li>
+  <li><strong>Usage Data:</strong> To enforce subscription limits (monthly totals) and calculate billing if you upgrade to a paid plan. We also use it to improve Product features and detect abusive behavior.</li>
       <li><strong>Extension Interaction Data:</strong> To enhance user experience, debug errors, and optimize performance. We do not share this with third parties except as described below.</li>
     </ul>
 
