update pricing page

--- a/public/pricing.html
+++ b/public/pricing.html
@@ -326,7 +326,8 @@
             <div class="limits-section">
                 <div class="limits-title">Usage Limits</div>
                 <ul class="limits-list">
-                    <li>10 listings per month</li>
+                    <li>Daily: 2 listings per day</li>
+                    <li>Monthly: 10 listings per month</li>
                     <li>Try before you buy</li>
                 </ul>
             </div>
@@ -353,7 +354,8 @@
             <div class="limits-section">
                 <div class="limits-title">Usage Limits</div>
                 <ul class="limits-list">
-                    <li>300 listings per month</li>
+                    <li>Daily: 15 listings per day</li>
+                    <li>Monthly: 300 listings per month</li>
                 </ul>
             </div>
 
@@ -378,7 +380,8 @@
             <div class="limits-section">
                 <div class="limits-title">Usage Limits</div>
                 <ul class="limits-list">
-                    <li>800 listings per month</li>
+                    <li>Daily: 40 listings per day</li>
+                    <li>Monthly: 800 listings per month</li>
                 </ul>
             </div>
 
@@ -403,7 +406,8 @@
             <div class="limits-section">
                 <div class="limits-title">Usage Limits</div>
                 <ul class="limits-list">
-                    <li>1,500 listings per month</li>
+                    <li>Daily: N/A — Business plan has no daily limit</li>
+                    <li>Monthly: 1,500 listings per month</li>
                 </ul>
             </div>
 
