--- a/public/privacy.html
+++ b/public/privacy.html
@@ -23,6 +23,7 @@
 
     <h2>9. Data Retention and Account Termination</h2>le=1" />
   <title>Privacy Policy – AutoLister AI</title>
+  <link rel="stylesheet" href="/css/header.css">
   <style>
     body {
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
