--- a/public/index.html
+++ b/public/index.html
@@ -6,22 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     
     <!-- SEO and Social Sharing Tags -->
-    <title>AutoLister.app - AI-Powered Vinted Listings in Seconds</title>
-    <meta name="description" content="Generate compelling Vinted listings instantly with AutoLister.app. Professional titles and descriptions that sell - powered by advanced AI technology.">
+    <title>AutoLister AI - AI-Powered Vinted Listings in Seconds</title>
+    <meta name="description" content="Generate compelling Vinted listings instantly with AutoLister AI. Professional titles and descriptions that sell - powered by advanced AI technology.">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://autolister.app/">
-    <meta property="og:title" content="AutoLister.app - AI-Powered Vinted Listings in Seconds">
+    <meta property="og:title" content="AutoLister AI - AI-Powered Vinted Listings in Seconds">
     <meta property="og:description" content="Stop wasting time writing descriptions. Generate compelling, sales-focused listings for Vinted from your photos in seconds.">
-    <meta property="og:image" content="https://placehold.co/1200x630/667eea/ffffff?text=AutoLister.app&font=inter">
+    <meta property="og:image" content="https://placehold.co/1200x630/667eea/ffffff?text=AutoLister AI&font=inter">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://autolister.app/">
-    <meta property="twitter:title" content="AutoLister.app - AI-Powered Vinted Listings in Seconds">
+    <meta property="twitter:title" content="AutoLister AI - AI-Powered Vinted Listings in Seconds">
     <meta property="twitter:description" content="Stop wasting time writing descriptions. Generate compelling, sales-focused listings for Vinted from your photos in seconds.">
-    <meta property="twitter:image" content="https://placehold.co/1200x630/667eea/ffffff?text=AutoLister.app&font=inter">
+    <meta property="twitter:image" content="https://placehold.co/1200x630/667eea/ffffff?text=AutoLister AI&font=inter">
     
     <style>
         body {
@@ -335,7 +335,7 @@
     <header class="header">
         <div class="container">
             <nav class="nav">
-                <a href="/" class="logo">AutoLister.app</a>
+                <a href="/" class="logo">AutoLister AI</a>
                 <!-- Desktop Nav -->
                 <div class="nav-links">
                     <a href="#features">Features</a>
@@ -410,7 +410,7 @@
     <section id="features" class="features">
         <div class="container">
             <div class="section-header">
-                <h2>Why Choose AutoLister.app?</h2>
+                <h2>Why Choose AutoLister AI?</h2>
                 <p>Our advanced AI technology creates listings that stand out and sell faster</p>
             </div>
             <div class="features-grid">
@@ -529,7 +529,7 @@
                 <a href="mailto:hello@autolister.app">Support</a>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 AutoLister.app. All rights reserved.</p>
+                <p>&copy; 2025 AutoLister AI. All rights reserved.</p>
             </div>
         </div>
     </footer>
