--- a/public/index.html
+++ b/public/index.html
@@ -170,7 +170,7 @@
     <footer class="footer">
         <div class="container">
             <div class="footer-links">
-                <a href="#pricing">Pricing</a>
+                <a href="pricing.html">Pricing</a>
                 <a href="/privacy.html">Privacy Policy</a>
                 <a href="/terms.html">Terms of Service</a>
                 <a href="mailto:hello@autolister.app">Support</a>
